# pageindex-vectorless-rag-service

./: AGENTS.md  ARCHITECTURE.md  Makefile  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
deploy/compose/: docker-compose.yml  prometheus.yml
deploy/docker/: Dockerfile
scripts/: demo.py
src/vectorless_rag_service/: __init__.py  config.py  main.py
src/vectorless_rag_service/api/: deps.py  errors.py  routes.py
src/vectorless_rag_service/core/: interfaces.py  models.py
src/vectorless_rag_service/indexing/: index_builder.py  parser.py
src/vectorless_rag_service/llm/: client.py
src/vectorless_rag_service/observability/: logging.py  metrics.py  middleware.py  tracing.py
src/vectorless_rag_service/retrieval/: baseline_retriever.py  pageindex_retriever.py
src/vectorless_rag_service/storage/: artifacts.py  database.py  metadata_store.py  models.py
tests/contract/: test_openapi.py
tests/integration/: test_health.py
tests/unit/: test_baseline_retriever.py
